Fix issue with view on mobile Safari

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -96,7 +96,8 @@ iframe {
 }
 
 #search-box {
-  width: 100%;
+  max-width: 100%;
+  min-width: 100%;
   height: 40px;
   font-size: 24px;
   color: black;
